# robotic-framework-measurements

./: .gitignore  Cargo.toml  Makefile  README.md  analyze_dds_pcap.py  compute-stats.py  parse-dataflow.py  parse.py  requirements.txt  run-breakdown-tests.sh  run-single-process-thr.sh  run-single-process.sh  thr-parse.py
analyze-zenoh-pcap/: Cargo.toml
analyze-zenoh-pcap/src/: analysis.rs  codecs.rs  lib.rs  types.rs  utils.rs
kafka/: Cargo.toml  docker-compose.yaml
kafka/src/kafka_ping/: main.rs  opts.rs
kafka/src/kafka_sub_thr/: main.rs
mqtt/: docker-compose.yaml  mosquitto.conf
mqtt/latency/: mqtt_ping.c
mqtt/throughput/: mqtt_sub_thr.c
ros/eval-ws/src/: CMakeLists.txt
ros/eval-ws/src/compute/: CMakeLists.txt  package.xml
ros/eval-ws/src/compute/include/compute/: compute.hpp
ros/eval-ws/src/compute/src/: compute.cpp  node_main.cpp
ros/eval-ws/src/compute_thr/: CMakeLists.txt  package.xml
ros/eval-ws/src/compute_thr/include/compute/: compute.hpp
ros/eval-ws/src/compute_thr/src/: compute.cpp  node_main.cpp
ros/eval-ws/src/eval_interfaces/: CMakeLists.txt  package.xml
ros/eval-ws/src/eval_interfaces/msg/: Evaluation.msg
ros/eval-ws/src/receiver/: CMakeLists.txt  package.xml
ros/eval-ws/src/receiver/include/receiver/: receiver.hpp
ros/eval-ws/src/receiver/src/: node_main.cpp  receiver.cpp
ros/eval-ws/src/receiver_thr/: CMakeLists.txt  package.xml
ros/eval-ws/src/receiver_thr/include/receiver/: receiver.hpp
ros/eval-ws/src/receiver_thr/src/: node_main.cpp  receiver.cpp
ros/eval-ws/src/sender/: CMakeLists.txt  package.xml
ros/eval-ws/src/sender/include/sender/: sender.hpp
ros/eval-ws/src/sender/src/: node_main.cpp  sender.cpp
ros/eval-ws/src/sender_thr/: CMakeLists.txt  package.xml
ros/eval-ws/src/sender_thr/include/sender/: sender.hpp
ros/eval-ws/src/sender_thr/src/: node_main.cpp  sender.cpp
ros2/: cyclonedds.xml
ros2/eval-ws/src/compute/: CMakeLists.txt  package.xml
ros2/eval-ws/src/compute/include/compute/: compute.hpp
ros2/eval-ws/src/compute/src/: compute.cpp  node_main.cpp
ros2/eval-ws/src/compute_thr/: CMakeLists.txt  package.xml
ros2/eval-ws/src/compute_thr/include/compute/: compute.hpp
ros2/eval-ws/src/compute_thr/src/: compute.cpp
ros2/eval-ws/src/eval_interfaces/: CMakeLists.txt  package.xml
ros2/eval-ws/src/eval_interfaces/msg/: Evaluation.msg
ros2/eval-ws/src/receiver/: CMakeLists.txt  package.xml
ros2/eval-ws/src/receiver/include/receiver/: receiver.hpp
ros2/eval-ws/src/receiver/src/: node_main.cpp  receiver.cpp
ros2/eval-ws/src/receiver_thr/: CMakeLists.txt  package.xml
ros2/eval-ws/src/receiver_thr/include/receiver/: receiver.hpp
ros2/eval-ws/src/receiver_thr/src/: node_main.cpp  receiver.cpp
ros2/eval-ws/src/sender/: CMakeLists.txt  package.xml
ros2/eval-ws/src/sender/include/sender/: sender.hpp
ros2/eval-ws/src/sender/src/: node_main.cpp  sender.cpp
ros2/eval-ws/src/sender_thr/: CMakeLists.txt  package.xml
ros2/eval-ws/src/sender_thr/include/sender/: sender.hpp
ros2/eval-ws/src/sender_thr/src/: node_main.cpp  sender.cpp
ros2/mont_blanc_ws/src/mont_blanc/: CMakeLists.txt  package.xml
ros2/mont_blanc_ws/src/mont_blanc/launch/: mont_blanc_all.launch.py  mont_blanc_robot.launch.py  mont_blanc_ws.launch.py
ros2/mont_blanc_ws/src/mont_blanc/param/: montblanc.yaml
ros2/mont_blanc_ws/src/nodes/: CMakeLists.txt  package.xml
ros2/mont_blanc_ws/src/nodes/include/: nodes.hpp  utils.hpp
ros2/mont_blanc_ws/src/nodes/src/: arequipa_node.cpp  barcelona_node.cpp  cordoba_node.cpp  delhi_node.cpp  freeport_node.cpp  geneva_node.cpp  georgetown_node.cpp  hamburg_node.cpp  hebron_node.cpp  kingston_node.cpp  lyon_node.cpp  madellin_node.cpp  mandalay_node.cpp  monaco_node.cpp  nodes.cpp  osaka_node.cpp  ponce_node.cpp  portsmouth_node.cpp  rotterdam_node.cpp  taipei_node.cpp  tripoli_node.cpp
tests/: prepare.sh
tests/latency/: df.sh  single-rate.sh
tests/latency/conf/: 100GbE.sh  cable-jetson.sh  cable-pi.sh  default.sh  localhost-arm.sh  localhost.sh  mmwave-pi.sh  testbed.sh  wifi-jetson.sh  wifi-pi-jetson-edge.sh  wifi-pi-jetson.sh  wifi-pi.sh  wifi6-pi.sh
tests/throughput/: df.sh
tests/throughput/conf/: 100GbE.sh  default.sh  localhost.sh  testbed.sh
zenoh/: Cargo.toml
