<?xml version="1.0"?>
<package format="2">
  <name>eval_interfaces</name>
  <version>0.0.1</version>
  <description>Package containing the interfaces for ros evalutation</description>

  <maintainer email="zenoh@zettascale.tech">Zenoh Team</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <export>

  </export>
</package>
