<?xml version="1.0"?>
<package format="2">
  <name>receiver_thr</name>
  <version>0.0.1</version>
  <description>The receiver package</description>

  <maintainer email="zenoh@zettascale.tech">Zenoh team</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eval_interfaces</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>eval_interfaces</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>eval_interfaces</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
