<?xml version="1.0"?>
<package format="2">
  <name>sender</name>
  <version>0.0.1</version>
  <description>The sender sends timestamps</description>

  <maintainer email="zenoh@zettascale.tech">Zenoh Team</maintainer>


  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>eval_interfaces</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>eval_interfaces</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
